--- a/css/cart.css
+++ b/css/cart.css
@@ -55,3 +55,139 @@
 .col a{
     color: rgb(35, 255, 218);
 }
+#footer{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    padding: 18px 8px;
+    padding-left: 20px;
+    margin-top: 50px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    
+}
+#footer li{
+    list-style: none;
+}
+#footer li:hover{
+    text-decoration: underline 1px solid black;
+    cursor: pointer;
+}
+#footer p{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    color: #1c1c1c;
+    letter-spacing: .5px;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: left;
+    background-color: #fff;
+}
+
+#footer h4{
+    margin-bottom: 1rem;
+    font-size: 1.1em;
+    line-height: 18px;
+    letter-spacing: .1rem; 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+#div4>div{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    width: 90%;
+}
+#div4 img{
+    width: 40%;
+}
+#NewsletterSignup{
+    width: 60%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 30px;
+}
+.Newsletter{
+    margin-top: 13px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+#NewsletterSignup>.Newsletter p{
+    padding-left: 7px;
+}
+#NewsletterSignup>.Newsletter input{
+    margin-top: 4.5px;
+}
+#div5 button{
+    text-align: center;
+    padding: 8px 80px;
+    margin-top: 10px;
+    font-size: 16px;
+    border: 1px solid grey;
+    background-color: white;
+    
+}
+#div5 button:hover{
+    cursor: pointer;
+    background-color: black;
+    color: aliceblue;
+}
+.footer-logo-con{
+    display: flex;
+    
+}
+.footer-logo-con>#footerimg{
+    width: 2%;
+}
+.footer-logo-con img{
+    width: 100%;
+    padding:10px 10px;
+}
+.footer-logo-con p{
+    padding-top: 14px;
+    padding-left: 20px;
+}
+#cart-container{
+    width: 95%;
+    margin: auto;
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+  }
+  img{
+    width: 100%;
+  }
+  #cart-container>div{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 10px;
+  }
+  button{
+    color: white;
+    padding: 3px;
+    font-size: 15px;
+    background-color:#ca0721;
+    border: 0px;
+    margin:8px 5px;
+    border-radius: 3px;
+  }
+  button:hover{
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+  h1{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+     'Open Sans', 'Helvetica Neue', sans-serif;
+     color:rgb(164, 94, 8);
+     margin-top: 15px;
+     text-align: center;
+  }
+  @media all and (min-width: 451px) and (max-width: 750px) {
+    #cart-container{
+        grid-template-columns: repeat(2,1fr);
+        margin: auto;
+    }
+  }
+  @media all and (min-width: 100px) and (max-width: 450px) {
+    #cart-container{
+        grid-template-columns: repeat(1,1fr);
+        margin: auto;
+    }
+}
